k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: phonebook
  labels:
    name: phonebook
    app: phonebook-system
