k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: phonebook-service
  namespace: phonebook
  labels:
    app: phonebook
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
    name: http
  selector:
    app: phonebook
---
apiVersion: v1
kind: Service
metadata:
  name: phonebook-nodeport
  namespace: phonebook
  labels:
    app: phonebook
    service-type: nodeport
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: 8080
    nodePort: 30080
    protocol: TCP
    name: http
  selector:
    app: phonebook
